--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.28.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.16",
     "uuid": "^8.3.2"
   }
