--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "node-cache": "^5.1.2",
     "nodemon": "^2.0.16",
